--- a/bootcamp-milestone-2/package.json
+++ b/bootcamp-milestone-2/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.11.0",
     "axios": "^1.6.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18"
